# solana-multisig-vault

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  states.rs
src/instructions/: create_multisig.rs  delete_multisig_action.rs  execute_multisig_action.rs  init_multisig_action.rs  mod.rs  vote_multisig_action.rs
test/: CreateMultiSig.js  ExecuteMultiSigAction.js  InitMultiSigAction.js  VoteMultiSigAction.js  VoteMultiSigAction1.js  pnpm-lock.yaml  schemas.js  test_all.sh
